--- a/jephatportfolio/src/sections/navbar/navbar.css
+++ b/jephatportfolio/src/sections/navbar/navbar.css
@@ -20,8 +20,8 @@ nav{
 }
 
 .nav__logo{
-    width:2.5rem;
-    /* height: 2.5rem; */
+    width:4.5rem;
+    height: 4.5rem;
     border-radius: 50%;
     overflow: hidden;
 }
