added download button and about pic

--- a/jephatportfolio/src/sections/header/Header.css
+++ b/jephatportfolio/src/sections/header/Header.css
@@ -22,8 +22,8 @@ header{
     margin-bottom: 1.5rem;
 
 }
-.header___container p {
-    width: 30rem;
+.header__container p{
+    width: 35rem;
     text-align: center;
     margin: 0.6rem 0 2rem;
 }
@@ -50,4 +50,40 @@ header{
     color: var(--color-black);
     display: grid;
     place-items: center;
+    border-radius: var(--border-radius-3);
+
 }
+.header__socials a:hover{
+    background: var(--color-primary);
+    color:var(--color-white);
+    transform: translatex(-0.5rem);
+}
+ 
+/* media queries(tablet) */
+@media screen and (max-width: 1024px) {
+    header{
+        margin-top: 0;
+        height: 100vh;
+    }
+}
+/* media queries(phones) */
+@media screen and (max-width: 600px){
+     .header__profile{
+        width:14rem;
+        height:17rem;
+        max-width: 60%;
+        max-height: 35vh;
+     }
+     .header__container p {
+        width: 100%;
+     }
+     .header__cta{
+        gap:1rem;
+     }
+     .header__socials{
+        display: none;
+     }
+}
+
+
+    
