--- a/jephatportfolio/src/index.css
+++ b/jephatportfolio/src/index.css
@@ -76,7 +76,7 @@ width: 40%;
 
 /* general sections style */
 a{
-  color: var(--color-white);
+  /* color: var(--color-white); */
   transition: var(--transition);
 }
 
