--- a/jephatportfolio/src/index.css
+++ b/jephatportfolio/src/index.css
@@ -9,10 +9,11 @@
 }
 
 :root{
+  background: rgb(109, 109, 182);
   --primary-hue: 270;
   --black-lightness: 15%;
-  --dark-lightness: 44%;
-  --light-lightness: 94%;
+  /* --dark-lightness: 44%; */
+  /* --light-lightness: 94%; */
   --white-lightness: 100%;
   --color-primary: hsl(var(--primary-hue),89%, 41%);
   --color-white: hsl(0, 5%, var(--white-lightness));
