--- a/jephatportfolio/src/sections/navbar/navbar.css
+++ b/jephatportfolio/src/sections/navbar/navbar.css
@@ -11,6 +11,7 @@ nav{
     box-shadow:0 1rem 1.5rem hsla(var(--primary-hue),
     68%, 42%, 20%);
     transition: var(--transition);
+    background: rgb(90, 75, 184);
 }
 
 .nav__container{
