--- a/jephatportfolio/src/sections/services/services.css
+++ b/jephatportfolio/src/sections/services/services.css
@@ -1,3 +1,7 @@
+#services{
+    background: rgb(227, 218, 218);
+}
+
 .services__container{
     display: grid;
     grid-template-columns: 1fr 1fr;
