--- a/jephatportfolio/src/sections/testmonial/testmonial.css
+++ b/jephatportfolio/src/sections/testmonial/testmonial.css
@@ -1,3 +1,7 @@
+#testmonials{
+    background: rgb(227, 218, 218);
+}
+
 .container.testimonials__container{
     width: 40%;
     padding-bottom: 4rem;
